--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "-": "0.0.1",
+    "@babel/core": "7.18.6",
     "@babel/preset-env": "7.18.6",
     "babel-loader": "8.2.5",
     "copy-webpack-plugin": "10.2.4",
